# Bubbles

./: .gitignore  .prototools  AGENT.md  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.moon/: toolchain.yml  workspace.yml
apps/bubble-tui/: Cargo.toml
apps/bubble-tui/src/: app.rs  main.rs  ui.rs
apps/desktop/: package.json  pnpm-lock.yaml
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  bubble_keys.json  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: BubbleBackground.css  BubbleBackground.tsx  PostNote.css  PostNote.tsx  Timeline.css  Timeline.tsx
apps/xq-prototype/: Cargo.toml  build.rs
apps/xq-prototype/benches/: benchmark.rs
apps/xq-prototype/examples/: client.rs
apps/xq-prototype/proto/: bubbles_xq.proto
apps/xq-prototype/src/: lib.rs  main.rs
apps/xq-prototype/src/json_model/: mod.rs
bubble-core/: Cargo.toml
bubble-core/migrations/: 202312090001_initial_schema.sql
bubble-core/src/: db.rs  lib.rs  wot.rs
bubble-sim/: Cargo.toml
bubble-sim/src/: main.rs
bubble-tui/: Cargo.toml
bubble-tui/src/: app.rs  main.rs
docs/: investigation_xq.md  labeling_spec.md
src/: app.rs  main.rs  ui.rs
