[package]
name = "bubble-core"
version = "0.1.0"
edition = "2021"

[dependencies]
nostr-sdk = "0.37"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
tracing = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
